--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "react-spinners": "^0.10.6",
+    "web-vitals": "^1.1.1",
+    "yahoo-finance": "^0.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
