--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.0"
+    "mongoose": "^5.12.0",
+    "pwd-strength": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
