--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^2.9.4",
     "mdbreact": "^5.0.1",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
