--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,19 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^2.9.4",
     "mdbreact": "^5.0.1",
+    "qrcode": "^1.4.4",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-pro-sidebar": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
+    "speakeasy": "^2.0.0",
+    "unirest": "^0.6.0",
     "web-vitals": "^1.1.1",
     "yahoo-finance": "^0.3.7"
   },
