--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0",
-    "pwd-strength": "^1.0.4"
+    "pwd-strength": "^1.0.4",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
